# Character_Solana

dapp/: next.config.js  package.json
dapp/src/assets/: creature_program_keypair.json
dapp/src/constants/: index.ts
dapp/src/data/: index.ts
dapp/src/pages/: _app.tsx  index.tsx
dapp/src/utils/: index.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: integration.rs
