[package]
name = "solana-creature"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
solana-program = "1.8.1"
thiserror = "1.0"

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
solana-program-test = "=1.8.1"
solana-sdk = "=1.8.1"

[lib]
crate-type = ["cdylib", "lib"]
